# ella

./: .gitignore  .releaserc.cjs  .releaserc.json  CONTRIBUTING.md  E2E_TEST_MARKER.md  E2E_TEST_MARKER_V2.md  README.md  action.yml  pyproject.toml  test.py
.ella/: agent.py  checks.sh.example  instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  e2e-request-changes.yml  ella-mizuki.yml  quote-e2e-test.yml  release.yml
docs/: README.md  commands.md  internals.md  setup.md
ella-install/.github/workflows/: ella.yml
src/: utils.py
tests/: test_agent.py  test_collect_reasoning.py  test_coverage_gaps.py  test_detect_commands.py  test_dual_model.py  test_env_int2.py  test_env_int_edge.py  test_execute_tool.py  test_labels_color.py  test_new_commands.py  test_parse_jsonish_hard.py  test_retries_and_flows.py  test_strip_reasoning.py  test_strip_tool_json.py  test_tail_text.py  test_utils.py
