[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ella-agent"
version = "0.0.0"
description = "Ella Mizuki AI Agent - internal test scaffolding"
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
